--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@frontity/html2react": "^1.7.0",
     "@frontity/tiny-router": "^1.4.2",
     "@frontity/wp-source": "^1.11.5",
-    "@frontity/yoast": "^2.1.1",
+    "@frontity/yoast": "file:@frontity/yoast",
     "antd": "^4.16.2",
     "bootstrap": "^4.6.0",
     "frontity": "^1.16.0",
